# Ground-Cracks-Net

./: .gitignore  .gitmodules  README.md
dataset/: images_test.csv  labels_test.csv  labels_train.csv
generator/: CMakeLists.txt
generator/configs/: configs.json
generator/src/: images.cpp  images.h  indicator.cpp  indicator.h  main.cpp  utils.cpp  utils.h
generator_py/: img.py  ind.py
generator_py/configs/: configs.yml
generator_py/src/: img.py  ind.py  main.py
network/: ground_cracks_net.ipynb
network/artifacts/: model.pt
network/src/: main.py  test.py  visual.py
visualisation/: visualisation.py
